--- a/style/style.css
+++ b/style/style.css
@@ -31,6 +31,7 @@
     display: flex;
     align-items: center;
     gap: 8px;
+    transition: 0.5s;
 }
 .link-other-page__image {
     width: 100px;
@@ -42,4 +43,7 @@
     color: white;
     font-size: 20px;
     font-weight: 600;
+}
+.link-other-page:hover{
+    opacity: 0.7;
 }
