feat : added header__navigation

--- a/style/style.css
+++ b/style/style.css
@@ -9,13 +9,36 @@
 /* header */
 
 .header {
-    background-image: url(../img/bgheader-1.jpg)
 }
 .header__content {
+}
+
+.header__auth{
+    background-color: black;
+    padding: 6px 0;
+    text-align: right;
+}
+
+.auth-link{
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    text-decoration: none;
+
+}
+.auth-link:hover{
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+.header__navigation{
+    background-image: url(../img/bgheader-1.jpg);
+    padding: 15px 0;
+}
+.header__navigation .container{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px 0;
+
 }
 .logotype {
     width: 250px;
