--- a/style/style.css
+++ b/style/style.css
@@ -55,6 +55,7 @@
     align-items: center;
     gap: 8px;
     transition: 0.5s;
+    min-width: 214px;
 }
 .link-other-page__image {
     width: 100px;
@@ -69,4 +70,18 @@
 }
 .link-other-page:hover{
     opacity: 0.7;
+}
+
+/*======== adaptive*/
+@media (max-width:768px) {
+    .header__navigation .container {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .link-other-page{
+        flex-direction: column;
+    }
+    
+
+    
 }
