--- a/style/style.css
+++ b/style/style.css
@@ -24,11 +24,14 @@
     font-size: 18px;
     font-weight: 600;
     text-decoration: none;
-
+    font-family: "Tektur", sans-serif;
 }
-.auth-link:hover{
-    text-decoration: underline;
-    text-underline-offset: 5px;
+@media(hover:hover){
+    .auth-link:hover{
+        text-decoration: underline;
+        text-underline-offset: 5px;
+    }
+
 }
 .header__navigation{
     background-image: url(../img/bgheader-1.jpg);
@@ -56,6 +59,7 @@
     gap: 8px;
     transition: 0.5s;
     min-width: 214px;
+    text-decoration: none;
 }
 .link-other-page__image {
     width: 100px;
@@ -66,10 +70,13 @@
     text-transform: capitalize;
     color: white;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 600; 
 }
-.link-other-page:hover{
-    opacity: 0.7;
+@media(hover:hover){
+
+    .link-other-page:hover{
+        opacity: 0.7;
+    }
 }
 
 /*======== adaptive*/
@@ -82,6 +89,19 @@
         flex-direction: column;
     }
     
-
-    
+}
+@media (max-width:425px) {
+    .logotype__image{
+        /* width: 125px; */
+    }
+    .link-other-page__image{
+        width: 70px;
+        height: 70px;
+    }
+    .link-other-page{
+        min-width: 106px;
+    }
+    .header__button-wrapper{
+        gap: 10px;
+    }
 }
