feat:added hero style for dekstop

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,14 @@
+:root{
+    --text-color: white
+
+}
+
+body{
+    background-color: black;
+    color: var(--text-color);
+}
+
+
 /* base style */
 .container {
     max-width: 1440px;
@@ -20,7 +31,7 @@
 }
 
 .auth-link{
-    color: white;
+    color: var(--text-color);
     font-size: 18px;
     font-weight: 600;
     text-decoration: none;
@@ -68,7 +79,7 @@
 .link-other-page__text {
     font-family: "Pixelify Sans", sans-serif;
     text-transform: capitalize;
-    color: white;
+    color: var(--text-color);
     font-size: 20px;
     font-weight: 600; 
 }
@@ -78,6 +89,46 @@
         opacity: 0.7;
     }
 }
+
+/*============= main*/
+.main {
+    padding: 20px 0;
+}
+.hero {
+}
+.container {
+}
+.hero__content {
+    background: 
+		linear-gradient(rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.3)), 
+		url(../img/bg-hero.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 70vh;
+    position: relative;
+}
+.hero__text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+
+
+}
+.hero__title {
+    font-family: "Pixelify Sans", sans-serif;
+    text-transform: capitalize;
+    display: inline;
+
+}
+.hero__description {
+    display: inline;
+    font-size: 20px;
+    font-family: "Tektur", sans-serif;
+    font-weight: 500;
+    text-shadow: 3px 3px 3px black;
+}
+
 
 /*======== adaptive*/
 @media (max-width:768px) {
