feat:added hero adaptive

--- a/style/style.css
+++ b/style/style.css
@@ -139,6 +139,9 @@ body{
     .link-other-page{
         flex-direction: column;
     }
+    .hero__text {
+        width: 90%;
+    }
     
 }
 @media (max-width:425px) {
@@ -154,5 +157,8 @@ body{
     }
     .header__button-wrapper{
         gap: 10px;
+    }
+    .hero__description{
+        font-size: 16px;
     }
 }
