--- a/style/style.css
+++ b/style/style.css
@@ -128,6 +128,7 @@ body{
     font-weight: 500;
     text-shadow: 3px 3px 3px black;
 }
+/* ======================footer */
 
 
 /*======== adaptive*/
