--- a/style/style.css
+++ b/style/style.css
@@ -181,6 +181,7 @@ ul,ol,li {
     z-index: 2;
     top: 50%;
     transform: translateY(-50%);
+    cursor: pointer;
 
 }
 .slick-prev{
@@ -191,6 +192,35 @@ ul,ol,li {
 .slick-next{
     background-image: url(../img/arrow-right.svg);
     right: -70px;
+}
+ul,ol,li{
+    list-style: none;
+}
+.slick-dots{
+    display: flex;
+    position: absolute;
+    left: 50%;
+    bottom: -20px;
+    transform: translateX(-50%);
+    gap: 15px;
+
+}
+.slick-dots button {
+    border: none;
+    outline: none;
+    background-color: white;
+    font-size: 0;
+    color: transparent;
+    width: 10px;
+    height: 12px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: transform 0.3s, background-color 0.3s;
+}
+.slick-active button {
+    background-color: #00fa4b;
+    transform: scale(1.2);
+    cursor:default ;
 }
 
 
@@ -224,6 +254,8 @@ ul,ol,li {
     border-image: linear-gradient(90deg, #47d1ff 0%, #00fa4b 100%);
     border-image-slice: 1;
 }
+
+
 
 
 /*======== adaptive*/
