--- a/style/style.css
+++ b/style/style.css
@@ -149,7 +149,6 @@ ul,ol,li {
 #slider{
     max-width: 800px;
     margin: 0 auto;
-    background-color: #00fa4b;
     position: relative;
 }
 
@@ -162,7 +161,6 @@ ul,ol,li {
     display: flex;
 }
 .slick-slide{
-    background-color: rgb(255, 0, 0);
     width: 100%;
     height: 300px;
 }
@@ -221,6 +219,28 @@ ul,ol,li{
     background-color: #00fa4b;
     transform: scale(1.2);
     cursor:default ;
+}
+
+.slick-slide{
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.slick-slide__first {
+    background-image: url(../img/breed.jpg);
+}
+.slick-slide__second {
+    background-image: url(../img/huss.jpg);
+}
+.slick-slide__third {
+    background-image: url(../img/jombee.jpg);
+}
+.slick-slide__fourth {
+    background-image: url(../img/baaam.jpg);
+}
+.slick-slide__fifth {
+    background-image: url(../img/vace-up.jpg);
+
 }
 
 
