--- a/style/style.css
+++ b/style/style.css
@@ -144,6 +144,10 @@ ul,ol,li {
 
 .about-game__content {
     height: 60vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #slider{
@@ -163,6 +167,7 @@ ul,ol,li {
 .slick-slide{
     width: 100%;
     height: 300px;
+    position: relative;
 }
 
 .slick-arrow{
@@ -221,25 +226,53 @@ ul,ol,li{
     cursor:default ;
 }
 
+
+.slick-slide__first {
+    background: 
+		linear-gradient(rgba(255, 255, 255, 0.203), rgba(0, 0, 0, 0.3)), 
+		url(../img/breed.jpg);
+}
+.slick-slide__second {
+    background: 
+		linear-gradient(rgba(255, 255, 255, 0.203), rgba(0, 0, 0, 0.3)), 
+		url(../img/huss.jpg);
+}
+.slick-slide__third {
+    background: 
+		linear-gradient(rgba(255, 255, 255, 0.203), rgba(0, 0, 0, 0.3)), 
+		url(../img/jombee.jpg);
+}
+.slick-slide__fourth {
+    background: 
+		linear-gradient(rgba(255, 255, 255, 0.203), rgba(0, 0, 0, 0.3)), 
+		url(../img/baaam.jpg);
+}
+.slick-slide__fifth {
+    background: 
+		linear-gradient(rgba(255, 255, 255, 0.203), rgba(0, 0, 0, 0.3)), 
+		url(../img/vace-up.jpg);
+
+}
 .slick-slide{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    position: relative;
 }
-.slick-slide__first {
-    background-image: url(../img/breed.jpg);
-}
-.slick-slide__second {
-    background-image: url(../img/huss.jpg);
-}
-.slick-slide__third {
-    background-image: url(../img/jombee.jpg);
-}
-.slick-slide__fourth {
-    background-image: url(../img/baaam.jpg);
-}
-.slick-slide__fifth {
-    background-image: url(../img/vace-up.jpg);
+.slider__text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 20px;
+    font-family: "Tektur", sans-serif;
+    font-weight: 500;
+    text-shadow: 3px 3px 3px black;
+    text-transform: uppercase;
+    width: 90%;
+    text-align: center;
+    letter-spacing: 1px;
+    line-height: 150%;
 
 }
 
