--- a/style/style.css
+++ b/style/style.css
@@ -336,6 +336,8 @@ ul,ol,li{
     font-size: 20px;
     font-family: "Tektur", sans-serif;
     font-weight: 500;
+    border: none;
+    outline: none;
 }
 
 
