--- a/style/style.css
+++ b/style/style.css
@@ -374,6 +374,15 @@ ul,ol,li{
     border-image-slice: 1;
 }
 
+/*========================screamer*/
+.screamer-img{
+    height: 100vh;
+    width: 100vw;
+    z-index: 2;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
 
 
 
